fix for edit bed form being out of view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -745,12 +745,14 @@ button {
 }
 
 .ember-modal-dialog {
-  top: 174% !important;
+  top: 174vh !important;
   min-width: 100%;
   height: 85%;
   padding: 0;
   border-radius: 6px 6px 0 0;
   animation: slideUp .3s forwards;
+  transform: translate(-50%, -65%) !important;
+  overflow: scroll;
 
   .header {
     display: inline-flex;
@@ -835,7 +837,7 @@ button {
 
 @keyframes slideUp {
   100% {
-    top: 74%;
+    top: 74vh;
   }
 }
 
